simple_form selector change to get ctrl+s working

--- a/app/views/cms/components/edit.html.erb
+++ b/app/views/cms/components/edit.html.erb
@@ -17,4 +17,4 @@
   </fieldset>
 <% end %>
 
-<%= codemirror_edit Cms::Editable::content_type(@component.path), 'form.formtastic', 'contents' %>
+<%= codemirror_edit Cms::Editable::content_type(@component.path), 'form.simple_form', 'contents' %>
