--- a/app/views/cms/pages/_form.html.erb
+++ b/app/views/cms/pages/_form.html.erb
@@ -11,4 +11,4 @@
   <% end %>
 </div>
 
-<%= codemirror_edit @page.content_type, 'form.formtastic.cms_page', 'cms_page_content' %>
+<%= codemirror_edit @page.content_type, 'form.simple_form.cms_page', 'cms_page_content' %>
