partial commit for rails 3 compatibility

--- a/app/views/cms/shared/_sidebar.html.erb
+++ b/app/views/cms/shared/_sidebar.html.erb
@@ -8,4 +8,4 @@
 <%= render 'cms/components/list' %>
 
 <hr style="border:1px solid #BBB" />
-<p style="text-align:right"><%= cms_icon 'page.png' %> <%= link_to 'Documentation', cms_documentation_path %></p>
+<p style="text-align:right"><%= cms_icon 'page.png' %> <%= link_to 'Documentation', cms_documentation_index_path %></p>
