--- a/app/views/cms/documentation/_cms_filters.html.erb
+++ b/app/views/cms/documentation/_cms_filters.html.erb
@@ -104,7 +104,7 @@
 </pre>
 </code>
 
-<h3><span class="function">paginate</span> - use to paginate new and used vehicles</h3>
+<h3><span class="function">paginate_links</span> - use to paginate new and used vehicles</h3>
 <p>Uses a page parameter from the url (if set) to determine what page of the pagination to display.  Ie. /vehicles?page=3</p>
 <ol>
   <li><span class="param">anchor</span> - apply an #anchor to all generated urls in the pagination</li>
