--- a/app/views/layouts/cms.html.erb
+++ b/app/views/layouts/cms.html.erb
@@ -16,7 +16,7 @@
 </head>
 <body id="cms">
   <div id="header">
-    <h1>Liquid CMS</h1>
+    <h1><%= link_to 'Liquid CMS', cms_root_path %></h1>
   </div>
 
   <div class="clearfix">
