update codemirror to 0.9

--- a/generators/liquid_cms/templates/public/cms/codemirror/csstest.html
+++ b/generators/liquid_cms/templates/public/cms/codemirror/csstest.html
@@ -49,7 +49,7 @@ code {
 
 <script type="text/javascript">
   var editor = CodeMirror.fromTextArea('code', {
-    height: "350px",
+    height: "dynamic",
     parserfile: "parsecss.js",
     stylesheet: "css/csscolors.css",
     path: "js/"
