--- a/lib/generators/liquid_cms/templates/public/cms/stylesheets/documentation.css
+++ b/lib/generators/liquid_cms/templates/public/cms/stylesheets/documentation.css
@@ -1,8 +1,8 @@
 #content {
   border-left: 1px solid #DDD;
-  width: 80%;
-  padding-left: 2em;
-  margin-left: 1.5em;
+  margin-left: 23em;
+  margin-right: 1em;
+  padding-left: 1em;
 }
 h4 {
   font-size: 10pt;
