clean up cms docs and include a new dark theme that is used by default

--- a/app/views/cms/shared/_index.html.erb
+++ b/app/views/cms/shared/_index.html.erb
@@ -1,1 +1,3 @@
-<p>Add a new page or upload a new asset.</p>
+<div class="message shadow curved">
+  <p>Add a new page or upload a new asset.</p>
+</div>
