--- a/app/views/cms/documentation/_special_vars.html.erb
+++ b/app/views/cms/documentation/_special_vars.html.erb
@@ -2,38 +2,30 @@
 
 <h3><span class="function">site_url</span> - The base url for the website including protocol and port based on the current request.</h3>
 
-<code>
 <pre>
 {{ site_url }} = http://testsite.com
 </pre>
-</code>
 
 <h3><span class="function">content_for_layout</span> - Inserts the contents of a page that defines it as its layout page.</h3>
 
-If there's a page called "layout" that contains the following:
-<code>
+<p>If there's a page called "layout" that contains the following:</p>
 <pre>
 &lt;html&gt;
   {{ content_for_layout }}
 &lt;/html&gt;
 </pre>
-</code>
 
-And a page called "content" that specifies "layout" as its layout page (done via the CMS UI):
-<code>
+<p>And a page called "content" that specifies "layout" as its layout page (done via the CMS UI):</p>
 <pre>
 &lt;div&gt;Content&lt;/div&gt;
 </pre>
-</code>
 
-This results in:
-<code>
+<p>This results in:</p>
 <pre>
 &lt;html&gt;
   &lt;div&gt;Content&lt;/div&gt;
 &lt;/html&gt;
 </pre>
-</code>
 
 <p>{{ content_for_layout }} can be nested in any number of pages to allow for layouts within layouts.</p>
 
@@ -41,7 +33,6 @@ This results in:
 
 <p class="example">For a page request of /path/page?test=1</p>
 
-<code>
 <pre>
 {{ params.test }} = 1
 {{ params.url }} = pathpage
@@ -49,5 +40,3 @@ This results in:
 {{ params.url[1] }} = page
 {{ params.url[2] }} = ''
 </pre>
-</code>
-
