--- a/test/rails_app/public/cms/stylesheets/documentation.css
+++ b/test/rails_app/public/cms/stylesheets/documentation.css
@@ -1,11 +1,17 @@
-#content {
-  border-left: 1px solid #DDD;
-  width: 80%;
-  padding-left: 2em;
-  margin-left: 1.5em;
-}
 h4 {
   font-size: 10pt;
+}
+.cms_documentation #content h2 {
+  margin-top: 1em;
+}
+.cms_documentation #content a {
+  text-decoration: none;
+}
+.cms_documentation #content a:hover {
+  text-decoration: underline;
+}
+#content pre {
+  margin: 0;
 }
 .subsection {
   margin-left: 1em;
@@ -27,5 +33,5 @@ span.function {
   background-color: #F5F5F5;
   border: 1px solid #333;
   padding: 0 0.5em;
-  margin-bottom: 1em;
+  margin: 1em 0;
 }
