--- a/test/rails_app/public/cms/stylesheets/styles.css
+++ b/test/rails_app/public/cms/stylesheets/styles.css
@@ -12,10 +12,15 @@ a img {
   border: none;
 }
 
+.curved {
+  -moz-border-radius: 0.5em;
+  -webkit-border-radius: 0.5em;
+  border-radius: 0.5em;
+}
+
 #header {
   position: relative;
   padding: 2em 0;
-  margin: 0 0 1em 0;
 }
 #header h1 {
   font-size: 18pt;
@@ -44,23 +49,43 @@ a img {
   font-weight: bold;
 }
 
+#outer-container {
+  height: 100%;
+  padding-top: 1em;
+}
+
 #content {
-  float: left;
-  margin-left: 2em;
-  width: 70%;
+  margin-left: 23em;
+  margin-right: 1em;
+  padding-bottom: 0.5em;
+}
+#content h1 {
+  padding-top: 0.5em;
+  margin-top: 0;
 }
 #content h2 {
   border-bottom: 1px solid #AAA;
   margin-top: 0;
   padding-bottom: 0.3em;
 }
+#content .message {
+  padding: 0.5em;
+  text-align: center;
+  background: none repeat scroll 0 0 #CCCCCC;
+  color: #333333;
+  font-weight: bold;
+  line-height: 5em;
+  padding: 0.5em;
+  text-align: center;
+  text-shadow: 1px 1px 4px #FFFFFF;
+}
 
 #sidebar {
   background-color: #CFCFCF;
   float: left;
   padding: 0 1em;
-  margin-left: 2em;
-  width: 250px;
+  margin-left: 1em;
+  width: 18em;
 }
 #sidebar h2 {
   font-size: 12pt;
@@ -75,12 +100,6 @@ a img {
   list-style-type: none;
   margin: 0;
   padding: 0;
-}
-#sidebar ul.tree, #sidebar #assets ul {
-  margin-bottom: 1em;
-}
-#sidebar ul.tree ul {
-  margin-left: 15px;
 }
 #sidebar #assets li {
   border: 1px solid #AAA;
@@ -135,6 +154,13 @@ h2 p.message {
 #cms ul.tree li { margin: 0; padding: 0 12px; line-height: 20px; background: url(/cms/images/tree/node.png) no-repeat; color: #369; font-weight: bold; } 
 #cms ul.tree li:last-child { background: url(/cms/images/tree/lastnode.png) no-repeat; }
 
+#cms ul.tree, #sidebar #assets ul {
+  margin-bottom: 1em;
+}
+#cms ul.tree ul {
+  margin-left: 15px;
+}
+
 .left {
   float: left;
 }
@@ -145,5 +171,4 @@ h2 p.message {
 .CodeMirror-wrapping iframe {
   background-color: white;
   border: 1px solid #BBBBBB !important;
-  width: 89% !important;
 }
