lock rails 2 gem to a specific version of simple_form and including missing theme stylesheet

--- a/generators/liquid_cms/templates/public/cms/stylesheets/styles.css
+++ b/generators/liquid_cms/templates/public/cms/stylesheets/styles.css
@@ -168,6 +168,9 @@ h2 p.message {
   float: right;
 }
 
+.CodeMirror-wrapping {
+  display: inline-block;
+}
 .CodeMirror-wrapping iframe {
   background-color: white;
   border: 1px solid #BBBBBB !important;
