--- a/app/views/cms/components/edit.html.erb
+++ b/app/views/cms/components/edit.html.erb
@@ -2,19 +2,17 @@
 
 <p>No liquid support currently for editing components.</p>
 
-<%= form_tag({:controller => 'cms/components', :action => 'update', :url => CGI::escape(@component.path)}, :class => 'formtastic') do %>
-  <fieldset class="inputs">
-    <ol>
-      <li class="string"><%= label_tag :name %> <%= text_field_tag :name, @component.path, :readonly => true %></li>
-      <li class="text"><%= label_tag :contents %> <%= text_area_tag :contents, @component.read, :rows => 40 %></li>
-    </ol>
-  </fieldset>
+<% form_tag({:controller => 'cms/components', :action => 'update', :url => CGI::escape(@component.path)}, :class => 'simple_form') do %>
+  <div class="string required">
+    <%= label_tag :name, nil, :class => 'string required' %> <%= text_field_tag :name, @component.path, :readonly => true, :class => 'string required' %>
+  </div>
+  <div class="text required">
+    <%= label_tag :contents, nil, :class => 'text required' %> <%= text_area_tag :contents, @component.read, :rows => 40, :class => 'text required' %>
+  </div>
 
-  <fieldset class="buttons">
-    <ol>
-      <li><%= submit_tag 'Update' %></li>
-    </ol>
-  </fieldset>
+  <div class="buttons">
+    <%= submit_tag 'Update', :class => 'update' %>
+  </div>
 <% end %>
 
 <%= codemirror_edit Cms::Editable::content_type(@component.path), 'form.simple_form', 'contents' %>
