--- a/lib/generators/liquid_cms/templates/public/cms/stylesheets/styles.css
+++ b/lib/generators/liquid_cms/templates/public/cms/stylesheets/styles.css
@@ -181,3 +181,10 @@ h2 p.message {
   background-color: white;
   border: 1px solid #BBBBBB !important;
 }
+
+.cms_pages #content h2 {
+  background: url("/cms/images/icons/page.png") no-repeat scroll right 50% transparent;
+}
+.cms_assets #content h2 {
+  background: url("/cms/images/icons/photo.png") no-repeat scroll right 50% transparent;
+}
