--- a/app/views/cms/components/edit.html.erb
+++ b/app/views/cms/components/edit.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="buttons">
-    <%= submit_tag 'Update', :class => 'update' %>
+    <%= submit_tag 'Update', :class => 'update' %> or <%= link_to 'Cancel', :back, :class => 'cancel' %>
   </div>
 <% end %>
 
