--- a/lib/generators/liquid_cms/templates/public/cms/stylesheets/styles.css
+++ b/lib/generators/liquid_cms/templates/public/cms/stylesheets/styles.css
@@ -113,5 +113,5 @@ h2 p.message {
   background: url("/cms/images/icons/page.png") no-repeat scroll right 50% transparent;
 }
 .cms_assets #content h2 {
-  background: url("/cms/images/icons/photo.png") no-repeat scroll right 50% transparent;
+  background: url("/cms/images/icons/picture.png") no-repeat scroll right 50% transparent;
 }
