--- a/app/views/layouts/cms.html.erb
+++ b/app/views/layouts/cms.html.erb
@@ -14,6 +14,9 @@
   <!--[if lte IE 8]>
   <%= stylesheet_link_tag '/cms/stylesheets/ie' %>
   <![endif]-->
+  <!--[if lte IE 9]>
+  <%= stylesheet_link_tag '/cms/stylesheets/ie9' %>
+  <![endif]-->
 </head>
 <body id="cms" class="cms_<%= params[:controller].camelize.demodulize.downcase %>">
   <div id="header">
