--- a/app/views/layouts/cms.html.erb
+++ b/app/views/layouts/cms.html.erb
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-  <title>Liquid CMS</title>
+  <title><%= t 'pages.layout.title' %></title>
   <%= javascript_include_tag 'prototype', 'effects', 'rails' %>
   <%= javascript_include_tag '/cms/javascripts/humanmsg', '/cms/javascripts/cookiejar', '/cms/javascripts/remote_helpers', '/cms/javascripts/cms', '/cms/javascripts/livepipe', '/cms/javascripts/tabs', :cache => 'cms_scripts' %>
   <%= javascript_include_tag '/cms/codemirror/js/codemirror' %>
@@ -19,9 +19,9 @@
   <![endif]-->
   <%= csrf_meta_tag %>
 </head>
-<body id="cms" class="cms_<%= params[:controller].camelize.demodulize.downcase %>">
+<body id="cms" class="cms_<%= params[:controller].camelize.demodulize.downcase %> cms_action_<%= params[:action].camelize.demodulize.downcase %>">
   <div id="header">
-    <h1><%= link_to 'Liquid CMS', cms_root_path %></h1>
+    <h1><%= link_to t('pages.layout.title'), cms_root_path %></h1>
   </div>
 
   <div id="outer-container" class="clearfix">
