--- a/lib/generators/liquid_cms/templates/public/cms/stylesheets/styles.css
+++ b/lib/generators/liquid_cms/templates/public/cms/stylesheets/styles.css
@@ -55,6 +55,8 @@ a img {
 }
 
 #content {
+  color: #333333;
+  min-width: 500px;
   margin-left: 23em;
   margin-right: 1em;
   padding-bottom: 0.5em;
@@ -72,7 +74,6 @@ a img {
   padding: 0.5em;
   text-align: center;
   background: none repeat scroll 0 0 #CCCCCC;
-  color: #333333;
   font-weight: bold;
   line-height: 5em;
   padding: 0.5em;
@@ -112,6 +113,45 @@ h2 p.message {
 .cms_pages #content h2 {
   background: url("/cms/images/icons/page.png") no-repeat scroll right 50% transparent;
 }
+.cms_pages.cms_action_search #content h2 {
+  background: url("/cms/images/icons/page_find.png") no-repeat scroll right 50% transparent;
+}
 .cms_assets #content h2 {
   background: url("/cms/images/icons/picture.png") no-repeat scroll right 50% transparent;
+}
+
+#search_results p {
+  font-weight: bold;
+}
+#search_results ul {
+  border: 1px solid #CCC;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+#search_results li {
+  line-height: 2em;
+  padding: 0.2em 0.5em;
+  margin-bottom: 1px;
+}
+#search_results li:last-child {
+  margin-bottom: 0;
+}
+#search_results li a {
+  color: black;
+  font-weight: bold;
+}
+#search_results li:nth-child(odd) {
+  background-color: #F5F5F5;
+}
+#search_results li:nth-child(even) {
+  background-color: lightGoldenRodYellow;
+}
+#search_results li:hover {
+  background-color: #BFD6FF !important;
+}
+#search_results li .page {
+}
+#search_results li .count {
+  font-family: courier new;  
 }
