--- a/lib/generators/liquid_cms/templates/public/cms/stylesheets/themes/dark.css
+++ b/lib/generators/liquid_cms/templates/public/cms/stylesheets/themes/dark.css
@@ -5,22 +5,23 @@ body {
   background: #222;
   background: -moz-linear-gradient(270deg, #555555 0%, #222 40%, #000 100%) repeat scroll 0 0 transparent;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0,#555), color-stop(0.40,#222), color-stop(1.0,#000));
+  color: #EEE;
+}
+#content {
+  color: #EEE;
+}
+#content a {
+  color: #FFE900;
 }
 #content h2 {
   color: #AAA;
   text-shadow: -1px -1px 2px #000000;
 }
-.cms_documentation #content {
-  color: #EEE;
-}
-#content .basic a, .cms_documentation #content a {
-  color: #FFE900;
-}
-#content .basic p, .cms_components #content p {
-  color: white;
-}
 .cms_documentation span.function {
   color: #49FF3F;
+}
+.cms_documentation .required {
+  color: #333;
 }
 .cms_documentation .cms_info {
   color: #333;
